@@ -1,0 +1,17 @@
+#  -*- Autoconf -*-
+
+AT_SETUP([checking a few command specific options])
+
+MONOTONE_SETUP
+
+AT_DATA(testfile, [This is complete junk
+])
+AT_CHECK(MONOTONE --branch=testbranch add testfile, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE add testfile, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=testbranch commit --message=blah-blah, [], [ignore], [ignore])
+ROOT_R_SHA=`BASE_REVISION`
+
+AT_CHECK(MONOTONE --branch=testbranch --depth=1 log, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE --depth=1 log, [], [ignore], [ignore])
+
+AT_CLEANUP
