@@ -594,3 +594,4 @@ m4_include(tests/t_annotate.at)
 m4_include(tests/t_annotate_add_collision.at)
 m4_include(tests/t_annotate_branch_collision.at)
 m4_include(tests/t_netsync_error.at)
+m4_include(tests/t_options.at)
